--- a/index.html
+++ b/index.html
@@ -135,45 +135,43 @@
     <h1 class="header hidden">Sjeakx Blast</h1>
     
     <!-- Dropdown button container -->
-    <div class="button-container">
-        <div class="dropdown hidden">
-            <button class="custom-btn btn-3">Blocked Games</button>
-            <div class="dropdown-content hidden">
-                <a href="https://macvg-sjeakx.vercel.app/" target="_blank">macvg (use unblocker)</a>
-                <a href="https://nettleweb-sjeakx.vercel.app/" target="_blank">nettleweb (use unblocker)</a>
-            </div>
+   <div class="button-container">
+    <div class="dropdown hidden">
+        <button class="custom-btn btn-3">Blocked Games</button>
+        <div class="dropdown-content hidden">
+            <a href="https://macvg-sjeakx.vercel.app/" target="_blank">macvg (use unblocker)</a>
+            <a href="https://nettleweb-sjeakx.vercel.app/" target="_blank">nettleweb (use unblocker)</a>
         </div>
-        <div class="dropdown hidden">
-            <button class="custom-btn btn-3">blocked Proxys</button>
-            <div class="dropdown-content hidden">
-                <a href="https://sjeakxweb.vercel.app/" target="_blank">Proxy (use unblocker)</a>
-                <a href="https://statistical-marla-sjeaks-97f6e201.koyeb.app//" target="_blank">holy unblocker(use unblocker)</a>
-            </div>
-        </div>
-        </div>
-        <div class="dropdown hidden">
-            <button class="custom-btn btn-3">unblocked Proxys</button>
-            <div class="dropdown-content hidden">
-                <a href="https://school.accesscam.org/" target="_blank">Proxy (use unblocker)</a>
-            </div>
-        </div>
-        <div class="dropdown hidden">
-            <button class="custom-btn btn-3">Unblocked Games</button>
-            <div class="dropdown-content hidden">
-                <a href="https://sjeakx.github.io/Sjeakx-blast/telltaleheartscript-backup-main/index.html" target="_blank">Unblocker/Games/Emulators</a>
-            </div>
-        </div>
-                <div class="dropdown hidden">
-            <button class="custom-btn btn-3">Cool things(blocked)</button>
-            <div class="dropdown-content hidden">
-                <a href="https://anura.pro/" target="_blank">A fake chrome os</a>
-                <a href="https://discord.gg/Gre4NYvv" target="_blank">discord full of unblockers/other websites/unenrollers </a>
-                <a href="hhttps://statistical-marla-sjeaks-97f6e201.koyeb.app/" target="_blank">games/poxy/emulators advanced</a>
-            </div>
-        </div>
-
-        <button class="custom-btn btn-3" onclick="showConfirmation()">LegoWeDo 2.0 (Unblocker)</button>
     </div>
+    <div class="dropdown hidden">
+        <button class="custom-btn btn-3">blocked Proxys</button>
+        <div class="dropdown-content hidden">
+            <a href="https://sjeakxweb.vercel.app/" target="_blank">Proxy (use unblocker)</a>
+            <a href="https://statistical-marla-sjeaks-97f6e201.koyeb.app//" target="_blank">holy unblocker(use unblocker)</a>
+        </div>
+    </div>
+    <div class="dropdown hidden">
+        <button class="custom-btn btn-3">unblocked Proxys</button>
+        <div class="dropdown-content hidden">
+            <a href="https://school.accesscam.org/" target="_blank">Proxy (use unblocker)</a>
+        </div>
+    </div>
+    <div class="dropdown hidden">
+        <button class="custom-btn btn-3">Unblocked Games</button>
+        <div class="dropdown-content hidden">
+            <a href="https://sjeakx.github.io/Sjeakx-blast/telltaleheartscript-backup-main/index.html" target="_blank">Unblocker/Games/Emulators</a>
+        </div>
+    </div>
+    <div class="dropdown hidden">
+        <button class="custom-btn btn-3">Cool things(blocked)</button>
+        <div class="dropdown-content hidden">
+            <a href="https://anura.pro/" target="_blank">A fake chrome os</a>
+            <a href="https://discord.gg/Gre4NYvv" target="_blank">discord full of unblockers/other websites/unenrollers</a>
+            <a href="https://statistical-marla-sjeaks-97f6e201.koyeb.app/" target="_blank">games/proxy/emulators advanced</a>
+        </div>
+    </div>
+    <button class="custom-btn btn-3" onclick="showConfirmation()">LegoWeDo 2.0 (Unblocker)</button>
+</div>
 
     <!-- Overlay for popup -->
     <div class="overlay hidden" id="overlay"></div>
