--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
         function loadUpdateInfo() {
             const updateInfoContainer = document.getElementById("update-info");
-            const githubUrl = "https://raw.githubusercontent.com/Sjeakx/sjeak-update/refs/heads/main/updates.txt"; // Replace with your actual GitHub raw file URL
+            const githubUrl = "https://raw.githubusercontent.com/Sjeakx/sjeak-update/refs/heads/main/updates.txt";
 
             fetch(githubUrl)
                 .then(response => response.text())
