--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 <button>Unblocked Games</button>
                 <div class="dropdown-content">
                     <a href="https://sjeakx.github.io/games" target="_blank">Games/Emulators/chatgpt</a>
+                    <a href="https://sjeakx.github.io/Sjeakx-blast/unblocker.html" target="_blank">unblocker</a>
                 </div>
             </div>
 
@@ -204,9 +205,8 @@
                     <a href="https://discord.gg/Gre4NYvv" target="_blank">Discord Full of Unblockers/Other Websites</a>
                 </div>
             </div>
-
-            <!-- LegoWeDo Button Moved Here -->
-            <button class="custom-btn btn-3" onclick="showConfirmation()">LegoWeDo 2.0 (Unblocker)Gatekeeping</button>
+        
+            <button class="custom-btn btn-3" onclick="showConfirmation()">(Unblocker)Gatekeeping</button>
         </div>
     </div>
 
