--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     updateInfoContainer.innerHTML = `<pre>${data}</pre>`; // Display the fetched content
                 })
                 .catch(error => {
-                    updateInfoContainer.innerHTML = "<p>Failed to load update information. Please try again later.</p>";
+                    updateInfoContainer.innerHTML = "<p>Clear your cookies</p>";
                 });
         }
 
