--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
                 const timeoutId = setTimeout(() => {
                     if (!isPPressed) {
-                        window.location.href = "https://sjeakx.github.io/sjeakx-blast/danderson.html"; // Redirect to google.com
+                        window.location.href = "https://sjeakx.github.io/dander/"; // Redirect to google.com
                     }
                 }, 2000);
 
