--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="dropdown">
                 <button>Unblocked Games</button>
                 <div class="dropdown-content">
-                    <a href="https://sjeakx.github.io/games" target="_blank">Games/Emulators/chatgpt</a>
+                    <a href="https://sjeakx.github.io" target="_blank">Games/Emulators/chatgpt</a>
                     <a href="https://sjeakx.github.io/Sjeakx-blast/unblocker.html" target="_blank">unblocker</a>
                 </div>
             </div>
