--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <button>Unblocked Games</button>
                 <div class="dropdown-content">
                     <a href="https://sjeakx.github.io" target="_blank">Games/Emulators/chatgpt</a>
-                    <a href="https://sjeakx.github.io/Sjeakx-blast/unblocker.html" target="_blank">unblocker</a>
+                    <a href="https://sjeakx.github.io/Sjeakx-blast/sec.html" target="_blank">unblocker</a>
                 </div>
             </div>
 
