--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             <div class="dropdown">
                 <button>Unblocked Games</button>
                 <div class="dropdown-content">
-                    <a href="https://sjeakx.github.io" target="_blank">Games/Emulators/chatgpt</a>
-                    <a href="https://sjeakx.github.io/Sjeakx-blast/sec.html" target="_blank">unblocker</a>
+                    <a href="https://sjeakxx.github.io" target="_blank">Games/Emulators/chatgpt</a>
+                    <a href="https://sjeakxx.github.io/Sjeakx-blast/sec.html" target="_blank">unblocker</a>
                 </div>
             </div>
 
@@ -312,7 +312,7 @@
 
         function loadUpdateInfo() {
             const updateInfoContainer = document.getElementById("update-info");
-            const githubUrl = "https://raw.githubusercontent.com/Sjeakx/sjeak-update/refs/heads/main/update.txt";
+            const githubUrl = "https://raw.githubusercontent.com/Sjeakxx/sjeak-update/refs/heads/main/update.txt";
 
             fetch(githubUrl)
                 .then(response => response.text())
