--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
             </div>
 
             <div class="dropdown">
-                <button>Unblocked Games</button>
+                <button>Unblocked things</button>
                 <div class="dropdown-content">
                     <a href="https://sjeakxx.github.io" target="_blank">Games/Emulators/chatgpt</a>
                     <a href="https://sjeakxx.github.io/Sjeakx-blast/sec.html" target="_blank">unblocker</a>
+                    <a href="https://sjeakxx.github.io/Sjeakx-blast/sand.html" target="_blank">unblocker</a>
                 </div>
             </div>
 
