--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="dropdown-content">
                     <a href="https://sjeakxx.github.io" target="_blank">Games/Emulators/chatgpt</a>
                     <a href="https://sjeakxx.github.io/Sjeakx-blast/sec.html" target="_blank">unblocker</a>
-                    <a href="https://sjeakxx.github.io/Sjeakx-blast/sand.html" target="_blank">unblocker</a>
+                    <a href="https://sjeakxx.github.io/Sjeakx-blast/sand.html" target="_blank">unblocker new</a>
                 </div>
             </div>
 
