--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="dropdown">
                 <button>Unblocked things</button>
                 <div class="dropdown-content">
-                    <a href="https://sjeakxx.github.io/Sjeakx-blast/gam.html">Games/Emulators/chatgpt</a>
+                    <a href="https://sjeakxx.github.io">Games/Emulators/chatgpt</a>
                     <a href="https://sjeakxx.github.io/Sjeakx-blast/sec.html" target="_blank">unblocker</a>
                     <a href="https://sjeakxx.github.io/Sjeakx-blast/sand.html" target="_blank">unblocker new</a>
                 </div>
